--- a/SmxDecompiler/SmxDecompiler.vcxproj.filters
+++ b/SmxDecompiler/SmxDecompiler.vcxproj.filters
@@ -56,6 +56,7 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="smx-file.cpp" />
+    <ClCompile Include="smx-disasm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="third_party\zlib\crc32.h">
@@ -92,5 +93,7 @@
       <Filter>third_party\zlib</Filter>
     </ClInclude>
     <ClInclude Include="smx-file.h" />
+    <ClInclude Include="smx-opcodes.h" />
+    <ClInclude Include="smx-disasm.h" />
   </ItemGroup>
 </Project>
