Basic control flow graph building

--- a/SmxDecompiler/SmxDecompiler.vcxproj
+++ b/SmxDecompiler/SmxDecompiler.vcxproj
@@ -154,9 +154,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cfg-builder.cpp" />
+    <ClCompile Include="cfg.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="smx-disasm.cpp" />
     <ClCompile Include="smx-file.cpp" />
+    <ClCompile Include="smx-opcodes.cpp" />
     <ClCompile Include="third_party\zlib\adler32.c" />
     <ClCompile Include="third_party\zlib\compress.c" />
     <ClCompile Include="third_party\zlib\crc32.c" />
@@ -174,6 +177,8 @@
     <ClCompile Include="third_party\zlib\zutil.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cfg-builder.h" />
+    <ClInclude Include="cfg.h" />
     <ClInclude Include="smx-disasm.h" />
     <ClInclude Include="smx-file.h" />
     <ClInclude Include="smx-opcodes.h" />
