--- a/SmxDecompiler/SmxDecompiler.vcxproj.filters
+++ b/SmxDecompiler/SmxDecompiler.vcxproj.filters
@@ -66,6 +66,7 @@
     <ClCompile Include="structurizer.cpp" />
     <ClCompile Include="code-writer.cpp" />
     <ClCompile Include="typer.cpp" />
+    <ClCompile Include="code-fixer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="third_party\zlib\crc32.h">
@@ -114,5 +115,6 @@
     <ClInclude Include="code-writer.h" />
     <ClInclude Include="statement.h" />
     <ClInclude Include="typer.h" />
+    <ClInclude Include="code-fixer.h" />
   </ItemGroup>
 </Project>
