--- a/SmxDecompiler/SmxDecompiler.vcxproj.filters
+++ b/SmxDecompiler/SmxDecompiler.vcxproj.filters
@@ -117,5 +117,6 @@
     <ClInclude Include="statement.h" />
     <ClInclude Include="typer.h" />
     <ClInclude Include="code-fixer.h" />
+    <ClInclude Include="optparse.h" />
   </ItemGroup>
 </Project>
